# brutus

./: .gitignore  Cargo.toml  Dockerfile  README.adoc  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: rust.yml
docs/: openapi.yml
docs/ui/: swagger-initializer.js
scripts/: bootstrap-s3  live-reload
src/: api.rs  dal.rs  error.rs  fusion.rs  main.rs  test_utils.rs
src/index/: hora_vector_index.rs  mod.rs  tantivy_text_index.rs  text_search.rs  vector_search.rs
src/search/: mod.rs  text_search.rs  vector_search.rs
tests/data/: doc_id_1106528470000.parquet
