[package]
name = "brutus"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/scribd/brutus"

[dependencies]
anyhow = "1.0.79"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
hora = "0.1.1"
object_store = { version = "0.9.0", features = ["aws"] }
parquet = { version = "50.0.0", features = ["object_store", "serde", "serde_json", "json", "async"] }
serde = { version = "1.0.196", features = ["derive"] }
tide = "0.16.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "chrono", "json"] }
